add CI job that runs full test suite

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -773,6 +773,10 @@ jobs:
         export RETCODE=+$?
         echo ::endgroup::
 
+        echo ::group::Run complete test suite
+        python -m pytest --tb=short -ra -sv
+        echo ::endgroup::
+
         RETCODE=+$?
 
         echo "Crashing Summary: \n"
