--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -748,6 +748,25 @@ jobs:
         python -m pip install pytest
         python -m pip install pytest-xdist
         echo ::endgroup::
+        echo ::group::Run complete test suite
+        python -m pytest --tb=short -ra -sv > pytest_dump.log
+        last_line=$(tail -n 1 pytest_dump.log)
+        # Extract the number of passed, failed, skipped, xpassed, xfailed, and errors
+        passed=$(echo "$last_line" | grep -oP "\d+ passed")
+        failed=$(echo "$last_line" | grep -oP "\d+ failed")
+        skipped=$(echo "$last_line" | grep -oP "\d+ skipped")
+        xpassed=$(echo "$last_line" | grep -oP "\d+ xpassed")
+        xfailed=$(echo "$last_line" | grep -oP "\d+ xfailed")
+        errors=$(echo "$last_line" | grep -oP "\d+ errors")
+
+        # Echo the results with colors
+        echo -e "\e[32mPASS: $passed\e[0m"
+        echo -e "\e[31mFAIL: $failed\e[0m"
+        echo -e "\e[33mSKIP: $skipped\e[0m"
+        echo -e "\e[33mXPASS: $xpassed\e[0m"
+        echo -e "\e[33mXFAIL: $xfailed\e[0m"
+        echo -e "\e[33mERRORS: $errors\e[0m"
+        echo ::endgroup::
         echo ::group::Crashing Test Logs
         # See if we don't have a crash that went away
         # Comment out all xfails but the ones that have a run=False condition.
@@ -771,10 +790,6 @@ jobs:
         set -o pipefail
         valgrind --error-exitcode=1 --suppressions=../etc/valgrind-cppyy-cling.supp python -m pytest -m "not xfail" -v
         export RETCODE=+$?
-        echo ::endgroup::
-
-        echo ::group::Run complete test suite
-        python -m pytest --tb=short -ra -sv
         echo ::endgroup::
 
         RETCODE=+$?
