ignore pytests exit code

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -749,7 +749,7 @@ jobs:
         python -m pip install pytest-xdist
         echo ::endgroup::
         echo ::group::Run complete test suite
-        python -m pytest --tb=short -ra -sv> pytest_dump.log 2>&1
+        python -m pytest --tb=short -ra -sv> pytest_dump.log 2>&1 || :
         last_line=$(tail -n 1 pytest_dump.log)
         passed=$(echo "$last_line" | grep -oP "\d+ passed")
         failed=$(echo "$last_line" | grep -oP "\d+ failed")
