--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -747,6 +747,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install pytest
         python -m pip install pytest-xdist
+        python -m pip install numba
         echo ::endgroup::
         echo ::group::Run complete test suite
         python -m pytest --tb=short -ra -sv> pytest_dump.log 2>&1 || :
