--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -202,6 +202,66 @@ jobs:
           #  cling: On
           #  cling-version: '1.0'
           #  cppyy: On
+          - name: osx14-arm-clang-clang-repl-17
+            os: macos-14
+            compiler: clang
+            clang-runtime: '17'
+            cling: Off
+            cppyy: Off
+          - name: osx14-arm-clang-clang-repl-17-cppyy
+            os: macos-14
+            compiler: clang
+            clang-runtime: '17'
+            cling: Off
+            cppyy: On
+          - name: osx14-arm-clang-clang-repl-17-xeus-clang-repl
+            os: macos-14
+            compiler: clang
+            clang-runtime: '17'
+            cling: Off
+            cppyy: On
+            xeus-clang-repl: On
+          - name: osx14-arm-clang-clang-repl-16
+            os: macos-14
+            compiler: clang
+            clang-runtime: '16'
+            cling: Off
+            cppyy: Off
+          - name: osx14-arm-clang-clang-repl-16-cppyy
+            os: macos-14
+            compiler: clang
+            clang-runtime: '16'
+            cling: Off
+            cppyy: On
+          - name: osx14-arm-clang-clang-repl-16-xeus-clang-repl
+            os: macos-14
+            compiler: clang
+            clang-runtime: '16'
+            cling: Off
+            cppyy: On
+            xeus-clang-repl: On
+          - name: osx14-arm-clang-clang13-cling
+            os: macos-14
+            compiler: clang
+            clang-runtime: '13'
+            cling: On
+            cling-version: '1.0'
+            cppyy: Off
+          - name: osx14-arm-clang-clang13-cling-cppyy
+            os: macos-14
+            compiler: clang
+            clang-runtime: '13'
+            cling: On
+            cling-version: '1.0'
+            cppyy: On
+          - name: osx14-arm-clang-clang13-cling-xeus-clang-repl
+            os: macos-14
+            compiler: clang
+            clang-runtime: '13'
+            cling: On
+            cling-version: '1.0'
+            cppyy: On
+            xeus-clang-repl: On
           - name: osx13-x86-clang-clang-repl-17
             os: macos-13
             compiler: clang
@@ -262,69 +322,6 @@ jobs:
             cling-version: '1.0'
             cppyy: On
             xeus-clang-repl: On
-          #Block commented out until free tier for m1
-          #exists (expected sometime 2024) and key for os 
-          #can be replaced
-          #- name: osx13-arm64-clang-clang-repl-17
-          #  os: macos-13-arm64
-          #  compiler: clang
-          #  clang-runtime: '17'
-          #  cling: Off
-          #  cppyy: Off
-          #- name: osx13-arm64-clang-clang-repl-17-cppyy
-          #  os: macos-13-arm64
-          #  compiler: clang
-          #  clang-runtime: '17'
-          #  cling: Off
-          #  cppyy: On
-          #- name: osx13-arm64-clang-clang-repl-17-xeus-clang-repl
-          #  os: macos-13-arm64
-          #  compiler: clang
-          #  clang-runtime: '17'
-          #  cling: Off
-          #  cppyy: On
-          #  xeus-clang-repl: On
-          #- name: osx13-arm64-clang-clang-repl-16
-          #  os: macos-13-arm64
-          #  compiler: clang
-          #  clang-runtime: '16'
-          #  cling: Off
-          #  cppyy: Off
-          #- name: osx13-arm64-clang-clang-repl-16-cppyy
-          #  os: macos-13-arm64
-          #  compiler: clang
-          #  clang-runtime: '16'
-          #  cling: Off
-          #  cppyy: On
-          #- name: osx13-arm64-clang-clang-repl-16-xeus-clang-repl
-          #  os: macos-13-arm64
-          #  compiler: clang
-          #  clang-runtime: '16'
-          #  cling: Off
-          #  cppyy: On
-          #  xeus-clang-repl: On
-          #- name: osx13-arm64-clang-clang13-cling
-          #  os: macos-13-arm64
-          #  compiler: clang
-          #  clang-runtime: '13'
-          #  cling: On
-          #  cling-version: '1.0'
-          #  cppyy: Off
-          #- name: osx13-arm64-clang-clang13-cling-cppyy
-          #  os: macos-13-arm64
-          #  compiler: clang
-          #  clang-runtime: '13'
-          #  cling: On
-          #  cling-version: '1.0'
-          #  cppyy: On
-          #- name: osx13-arm64-clang-clang13-cling-xeus-clang-repl
-          #  os: macos-13-arm64
-          #  compiler: clang
-          #  clang-runtime: '13'
-          #  cling: On
-          #  cling-version: '1.0'
-          #  cppyy: On
-          #  xeus-clang-repl: On
           
     steps:
     - uses: actions/checkout@v3
