--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,13 +162,14 @@ jobs:
           #  cling-version: '1.0'
           #  cppyy: On
           #  xeus-clang-repl: On
+          #FIXME: Windows CppInterOp tests expected to fail
+          #until https://github.com/compiler-research/CppInterOp/issues/188 is solved
           - name: win2022-msvc-clang-repl-17
             os: windows-2022
             compiler: msvc
             clang-runtime: '17'
             cling: Off
             cppyy: Off
-          #Commented out until rest of ci for Windows tested
           #- name: win2022-msvc-clang-repl-17-cppyy
           #  os: windows-2022
           #  compiler: msvc
@@ -181,7 +182,6 @@ jobs:
             clang-runtime: '16'
             cling: Off
             cppyy: Off
-          #Commented out until rest of ci for Windows tested
           #- name: win2022-msvc-clang-repl-16-cppyy
           #  os: windows-2022
           #  compiler: msvc
@@ -195,7 +195,6 @@ jobs:
             cling: On
             cling-version: '1.0'
             cppyy: Off
-          #Commented out until rest of ci for Windows tested
           #- name: win2022-msvc-cling-cppyy
           #  os: windows-2022
           #  compiler: msvc
@@ -203,6 +202,66 @@ jobs:
           #  cling: On
           #  cling-version: '1.0'
           #  cppyy: On
+          - name: osx14-arm-clang-clang-repl-17
+            os: macos-14
+            compiler: clang
+            clang-runtime: '17'
+            cling: Off
+            cppyy: Off
+          - name: osx14-arm-clang-clang-repl-17-cppyy
+            os: macos-14
+            compiler: clang
+            clang-runtime: '17'
+            cling: Off
+            cppyy: On
+          - name: osx14-arm-clang-clang-repl-17-xeus-clang-repl
+            os: macos-14
+            compiler: clang
+            clang-runtime: '17'
+            cling: Off
+            cppyy: On
+            xeus-clang-repl: On
+          - name: osx14-arm-clang-clang-repl-16
+            os: macos-14
+            compiler: clang
+            clang-runtime: '16'
+            cling: Off
+            cppyy: Off
+          - name: osx14-arm-clang-clang-repl-16-cppyy
+            os: macos-14
+            compiler: clang
+            clang-runtime: '16'
+            cling: Off
+            cppyy: On
+          - name: osx14-arm-clang-clang-repl-16-xeus-clang-repl
+            os: macos-14
+            compiler: clang
+            clang-runtime: '16'
+            cling: Off
+            cppyy: On
+            xeus-clang-repl: On
+          - name: osx14-arm-clang-clang13-cling
+            os: macos-14
+            compiler: clang
+            clang-runtime: '13'
+            cling: On
+            cling-version: '1.0'
+            cppyy: Off
+          - name: osx14-arm-clang-clang13-cling-cppyy
+            os: macos-14
+            compiler: clang
+            clang-runtime: '13'
+            cling: On
+            cling-version: '1.0'
+            cppyy: On
+          - name: osx14-arm-clang-clang13-cling-xeus-clang-repl
+            os: macos-14
+            compiler: clang
+            clang-runtime: '13'
+            cling: On
+            cling-version: '1.0'
+            cppyy: On
+            xeus-clang-repl: On
           - name: osx13-x86-clang-clang-repl-17
             os: macos-13
             compiler: clang
@@ -263,69 +322,6 @@ jobs:
             cling-version: '1.0'
             cppyy: On
             xeus-clang-repl: On
-          #Block commented out until free tier for m1
-          #exists (expected sometime 2024) and key for os 
-          #can be replaced
-          #- name: osx13-arm64-clang-clang-repl-17
-          #  os: macos-13-arm64
-          #  compiler: clang
-          #  clang-runtime: '17'
-          #  cling: Off
-          #  cppyy: Off
-          #- name: osx13-arm64-clang-clang-repl-17-cppyy
-          #  os: macos-13-arm64
-          #  compiler: clang
-          #  clang-runtime: '17'
-          #  cling: Off
-          #  cppyy: On
-          #- name: osx13-arm64-clang-clang-repl-17-xeus-clang-repl
-          #  os: macos-13-arm64
-          #  compiler: clang
-          #  clang-runtime: '17'
-          #  cling: Off
-          #  cppyy: On
-          #  xeus-clang-repl: On
-          #- name: osx13-arm64-clang-clang-repl-16
-          #  os: macos-13-arm64
-          #  compiler: clang
-          #  clang-runtime: '16'
-          #  cling: Off
-          #  cppyy: Off
-          #- name: osx13-arm64-clang-clang-repl-16-cppyy
-          #  os: macos-13-arm64
-          #  compiler: clang
-          #  clang-runtime: '16'
-          #  cling: Off
-          #  cppyy: On
-          #- name: osx13-arm64-clang-clang-repl-16-xeus-clang-repl
-          #  os: macos-13-arm64
-          #  compiler: clang
-          #  clang-runtime: '16'
-          #  cling: Off
-          #  cppyy: On
-          #  xeus-clang-repl: On
-          #- name: osx13-arm64-clang-clang13-cling
-          #  os: macos-13-arm64
-          #  compiler: clang
-          #  clang-runtime: '13'
-          #  cling: On
-          #  cling-version: '1.0'
-          #  cppyy: Off
-          #- name: osx13-arm64-clang-clang13-cling-cppyy
-          #  os: macos-13-arm64
-          #  compiler: clang
-          #  clang-runtime: '13'
-          #  cling: On
-          #  cling-version: '1.0'
-          #  cppyy: On
-          #- name: osx13-arm64-clang-clang13-cling-xeus-clang-repl
-          #  os: macos-13-arm64
-          #  compiler: clang
-          #  clang-runtime: '13'
-          #  cling: On
-          #  cling-version: '1.0'
-          #  cppyy: On
-          #  xeus-clang-repl: On
           
     steps:
     - uses: actions/checkout@v3
@@ -362,7 +358,6 @@ jobs:
     - name: Save PR Info on Windows systems
       if: ${{ runner.os == 'windows' }}
       run: |
-        #FIXME: CLING AND LLVM HASH currently hardcoded until windows equivalent of unix commands
         #can be found
         mkdir  ./pr
         echo "${{ github.event.number }}" > ./pr/NR
@@ -710,8 +705,11 @@ jobs:
         echo "CPLUS_INCLUDE_PATH=$CPLUS_INCLUDE_PATH" >> $GITHUB_ENV
 
     - name: Build and Test/Install CppInterOp on Windows systems
+      continue-on-error: true
       if: ${{ runner.os == 'windows' }}
       run: |
+        #FIXME: Windows CppInterOp tests expected to fail
+        #until https://github.com/compiler-research/CppInterOp/issues/188 is solved
         $env:PWD_DIR= $PWD.Path
         
         $env:LLVM_DIR="$env:PWD_DIR\llvm-project"
