Export MSVC library symbols from clangCppInterOp so STL can be compiled without export errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -373,6 +373,55 @@ option(CPPINTEROP_ENABLE_DOXYGEN "Use doxygen to generate CppInterOp interal API
 option(CPPINTEROP_ENABLE_SPHINX "Use sphinx to generage CppInterOp user documentation")
 option(CPPINTEROP_ENABLE_TESTING "Enables the testing infrastructure." ON)
 
+if(MSVC)
+
+  set(MSVC_EXPORTLIST
+   ??_7type_info@@6B@
+   ?nothrow@std@@3Unothrow_t@1@B
+   _Init_thread_header
+   _Init_thread_footer
+   ??_7type_info@@6B@
+   ?_Facet_Register@std@@YAXPEAV_Facet_base@1@@Z
+  )
+
+  set(MSVC_EXPORTLIST ${MSVC_EXPORTLIST}
+   ??2@YAPEAX_K@Z
+   ??3@YAXPEAX@Z
+   ??3@YAXPEAX_K@Z
+   ??_U@YAPEAX_K@Z
+   ??_V@YAXPEAX@Z
+   ??_V@YAXPEAX_K@Z
+   ??2@YAPEAX_KAEBUnothrow_t@std@@@Z
+   ??_U@YAPEAX_KAEBUnothrow_t@std@@@Z
+   ??6?$basic_ostream@DU?$char_traits@D@std@@@std@@QEAAAEAV01@H@Z
+   ??6?$basic_ostream@DU?$char_traits@D@std@@@std@@QEAAAEAV01@M@Z
+   ??6?$basic_ostream@DU?$char_traits@D@std@@@std@@QEAAAEAV01@N@Z
+   ??6?$basic_ostream@DU?$char_traits@D@std@@@std@@QEAAAEAV01@PEBX@Z
+   ??6?$basic_ostream@DU?$char_traits@D@std@@@std@@QEAAAEAV01@P6AAEAV01@AEAV01@@Z@Z
+   ??$?6U?$char_traits@D@std@@@std@@YAAEAV?$basic_ostream@DU?$char_traits@D@std@@@0@AEAV10@D@Z
+   ??$?6U?$char_traits@D@std@@@std@@YAAEAV?$basic_ostream@DU?$char_traits@D@std@@@0@AEAV10@PEBD@Z
+   ?_Facet_Register@std@@YAXPEAV_Facet_base@1@@Z
+  )
+
+  if(MSVC_VERSION LESS 1914)
+    set(MSVC_EXPORTLIST ${MSVC_EXPORTLIST} ??3@YAXPAX0@Z ??_V@YAXPAX0@Z)
+  endif()
+
+  if(MSVC_VERSION GREATER_EQUAL 1936)
+    set(MSVC_EXPORTLIST ${MSVC_EXPORTLIST}
+        __std_find_trivial_1
+        __std_find_trivial_2
+        __std_find_trivial_4
+        __std_find_trivial_8
+    )
+  endif()
+
+foreach(sym ${MSVC_EXPORTLIST})
+  set(MSVC_EXPORTS "${MSVC_EXPORTS} /EXPORT:${sym}")
+endforeach(sym ${MSVC_EXPORTLIST})
+
+endif()
+
 if (CPPINTEROP_INCLUDE_DOCS)
   add_subdirectory(docs)
 endif()
