Compiler Dynamic Library Manager test only if Clang-repl is used
Signed-off-by: Shreyas Atre <shreyasatre16@gmail.com>

--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -22,14 +22,17 @@ export_executable_symbols(CppInterOpTests)
 
 unset(LLVM_LINK_COMPONENTS)
 
-add_cppinterop_unittest(DynamicLibraryManagerTests DynamicLibraryManagerTest.cpp)
-target_link_libraries(DynamicLibraryManagerTests
-  PRIVATE
-  clangCppInterOp
-  )
+if(USE_REPL)
+    add_cppinterop_unittest(DynamicLibraryManagerTests DynamicLibraryManagerTest.cpp)
+    target_link_libraries(DynamicLibraryManagerTests
+    PRIVATE
+    clangCppInterOp
+    )
 
-set_output_directory(DynamicLibraryManagerTests BINARY_DIR ${CMAKE_BINARY_DIR}/unittests/bin/$<CONFIG>/)
+    set_output_directory(DynamicLibraryManagerTests BINARY_DIR ${CMAKE_BINARY_DIR}/unittests/bin/$<CONFIG>/)
 
-add_dependencies(DynamicLibraryManagerTests TestSharedLib)
+    add_dependencies(DynamicLibraryManagerTests TestSharedLib)
+endif()
+
 #export_executable_symbols_for_plugins(TestSharedLib)
 add_subdirectory(TestSharedLib)
