--- a/cmake/CppInterOp/CppInterOpConfig.cmake.in
+++ b/cmake/CppInterOp/CppInterOpConfig.cmake.in
@@ -19,7 +19,7 @@ endif()
 if (@BUILD_SHARED_LIBS@)
   set(_lib_suffix ${CMAKE_SHARED_LIBRARY_SUFFIX})
   set(_lib_prefix ${CMAKE_SHARED_LIBRARY_PREFIX})
-else()    
+else()
   set(_lib_suffix ${CMAKE_STATIC_LIBRARY_SUFFIX})
   set(_lib_prefix ${CMAKE_STATIC_LIBRARY_PREFIX})
 endif()
@@ -39,10 +39,17 @@ set(CPPINTEROP_CMAKE_DIR "${_cmake}")
 set(CPPINTEROP_INCLUDE_DIRS "${_include}")
 set(CPPINTEROP_LIBRARIES "${_lib}")
 
+set(CPPINTEROP_LLVM_VERSION "$LLVM_VERSION")
+set(CPPINTEROP_LLVM_VERSION_MAJOR "$LLVM_VERSION_MAJOR")
+set(CPPINTEROP_LLVM_VERSION_MINOR "$LLVM_VERSION_MINOR")
+set(CPPINTEROP_LLVM_VERSION_PATCH "$LLVM_VERSION_PATCH")
+set(CPPINTEROP_LLVM_VERSION_SUFFIX "$LLVM_VERSION_SUFFIX")
+set(CPPINTEROP_LLVM_PACKAGE_VERSION "$PACKAGE_VERSION")
+
 # Provide all our library targets to users.
 if (@BUILD_SHARED_LIBS@)
   add_library(clangCppInterOp SHARED IMPORTED)
-else()    
+else()
   add_library(clangCppInterOp STATIC IMPORTED)
 endif()
 set_target_properties(clangCppInterOp PROPERTIES
