--- a/cmake/CppInterOp/CppInterOpConfig.cmake.in
+++ b/cmake/CppInterOp/CppInterOpConfig.cmake.in
@@ -39,12 +39,12 @@ set(CPPINTEROP_CMAKE_DIR "${_cmake}")
 set(CPPINTEROP_INCLUDE_DIRS "${_include}")
 set(CPPINTEROP_LIBRARIES "${_lib}")
 
-set(CPPINTEROP_LLVM_VERSION "$LLVM_VERSION")
-set(CPPINTEROP_LLVM_VERSION_MAJOR "$LLVM_VERSION_MAJOR")
-set(CPPINTEROP_LLVM_VERSION_MINOR "$LLVM_VERSION_MINOR")
-set(CPPINTEROP_LLVM_VERSION_PATCH "$LLVM_VERSION_PATCH")
-set(CPPINTEROP_LLVM_VERSION_SUFFIX "$LLVM_VERSION_SUFFIX")
-set(CPPINTEROP_LLVM_PACKAGE_VERSION "$PACKAGE_VERSION")
+set(CPPINTEROP_LLVM_VERSION "@LLVM_VERSION@")
+set(CPPINTEROP_LLVM_VERSION_MAJOR "@LLVM_VERSION_MAJOR@")
+set(CPPINTEROP_LLVM_VERSION_MINOR "@LLVM_VERSION_MINOR@")
+set(CPPINTEROP_LLVM_VERSION_PATCH "@LLVM_VERSION_PATCH@")
+set(CPPINTEROP_LLVM_VERSION_SUFFIX "@LLVM_VERSION_SUFFIX@")
+set(CPPINTEROP_LLVM_PACKAGE_VERSION "@PACKAGE_VERSION@")
 
 # Provide all our library targets to users.
 if (@BUILD_SHARED_LIBS@)
