Make running emscripten_wasm dependent on sucessfull run of build in ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -977,6 +977,7 @@ jobs:
       timeout-minutes: 30
 
   emscripten_wasm:
+    needs: [build]
     name: ${{ matrix.name }}
     runs-on: ${{ matrix.os }}
     strategy:
