--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -810,6 +810,9 @@ jobs:
         sudo apt install git g++ debhelper devscripts gnupg python3 valgrind
         sudo apt autoremove
         sudo apt clean
+        # Install libraries used by the cppyy test suite
+        sudo apt install libeigen3-dev
+        sudo apt install libboost-all-dev
 
     - name: Install deps on MacOS
       if: runner.os == 'macOS'
@@ -821,6 +824,8 @@ jobs:
           brew link --overwrite "$pkg"
         done
         brew upgrade
+        brew install eigen
+        brew install boost
         pip install distro pytest
 
     - name: Restore Cache LLVM/Clang runtime build directory
@@ -1077,9 +1082,6 @@ jobs:
       continue-on-error: true
       if: ${{ (runner.os != 'windows') && (matrix.cppyy == 'On') && (matrix.xeus-clang-repl != 'On') }}
       run: |
-        # Install libraries used by the cppyy test suite
-        sudo apt install libeigen3-dev
-        sudo apt install libboost-all-dev
         # Run the tests
         source .venv/bin/activate
         cd cppyy/test
@@ -1091,23 +1093,7 @@ jobs:
         python -m pip install numba
         echo ::endgroup::
         echo ::group::Run complete test suite
-        python -m pytest --tb=short -ra -sv> pytest_dump.log 2>&1 || :
-        last_line=$(tail -n 1 pytest_dump.log)
-        passed=$(echo "$last_line" | grep -oP "\d+ passed")
-        failed=$(echo "$last_line" | grep -oP "\d+ failed")
-        skipped=$(echo "$last_line" | grep -oP "\d+ skipped")
-        xpassed=$(echo "$last_line" | grep -oP "\d+ xpassed")
-        xfailed=$(echo "$last_line" | grep -oP "\d+ xfailed")
-        errors=$(echo "$last_line" | grep -oP "\d+ errors")
-        echo -e "\e[32mPASS: $passed\e[0m"
-        echo -e "\e[31mFAIL: $failed\e[0m"
-        echo -e "\e[33mSKIP: $skipped\e[0m"
-        echo -e "\e[33mXPASS: $xpassed\e[0m"
-        echo -e "\e[33mXFAIL: $xfailed\e[0m"
-        echo -e "\e[33mERRORS: $errors\e[0m"
-        echo ::endgroup::
-        echo "Cppyy Test Logs:"
-        tail -n1 pytest_dump.log
+        python -m pytest
         echo ::group::Crashing Test Logs
         # See if we don't have a crash that went away
         # Comment out all xfails but the ones that have a run=False condition.
