--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -196,8 +196,8 @@ jobs:
           if ! sudo apt install -y clang-${vers}; then
             curl https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
             echo "deb https://apt.llvm.org/${os_codename}/ llvm-toolchain-${os_codename}-${vers} main" | sudo tee -a /etc/apt/sources.list
-            sudo apt update
-            sudo apt install -y clang-${vers}
+            sudo apt-get update
+            sudo apt-get install -y clang-${vers}
           fi
           echo "CC=clang-${vers}" >> $GITHUB_ENV
           echo "CXX=clang++-${vers}" >> $GITHUB_ENV
@@ -253,9 +253,9 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         # Install deps
-        sudo apt update
-        sudo apt autoremove
-        sudo apt clean
+        sudo apt-get update
+        sudo apt-get autoremove
+        sudo apt-get clean
 
     - name: Install deps on MacOS
       if: runner.os == 'macOS'
@@ -743,7 +743,7 @@ jobs:
           if ! sudo apt install -y clang-${vers}; then
             curl https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
             echo "deb https://apt.llvm.org/${os_codename}/ llvm-toolchain-${os_codename}-${vers} main" | sudo tee -a /etc/apt/sources.list
-            sudo apt update
+            sudo apt-get update
             sudo apt install -y clang-${vers}
           fi
           echo "CC=clang-${vers}" >> $GITHUB_ENV
@@ -800,7 +800,7 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         # Install deps
-        sudo apt update
+        sudo apt-get update
         sudo apt install git g++ debhelper devscripts gnupg python3 valgrind
         sudo apt autoremove
         sudo apt clean
@@ -1269,10 +1269,10 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         # Install deps
-        sudo apt update
-        sudo apt install git g++ debhelper devscripts gnupg python3 valgrind
-        sudo apt autoremove
-        sudo apt clean
+        sudo apt-get update
+        sudo apt-get install git g++ debhelper devscripts gnupg python3 valgrind
+        sudo apt-get autoremove
+        sudo apt-get clean
 
     - name: Install mamba
       uses: mamba-org/provision-with-micromamba@main
