--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -801,12 +801,12 @@ jobs:
       run: |
         # Install deps
         sudo apt-get update
-        sudo apt install git g++ debhelper devscripts gnupg python3 valgrind
+        sudo apt-get install git g++ debhelper devscripts gnupg python3 valgrind
         sudo apt autoremove
         sudo apt clean
         # Install libraries used by the cppyy test suite
-        sudo apt install libeigen3-dev
-        sudo apt install libboost-all-dev
+        sudo apt-get install libeigen3-dev
+        sudo apt-get install libboost-all-dev
 
     - name: Install deps on MacOS
       if: runner.os == 'macOS'
