Prevent true for osx with llvm 17,18

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1108,7 +1108,7 @@ jobs:
         declare -i RETCODE=0
 
         set -o pipefail
-        if [[ "${{ matrix.clang-runtime }}" == "17" || "${{ matrix.clang-runtime }}" == "18" ]]; then
+        if [[ "${{ matrix.clang-runtime }}" == "17" || "${{ matrix.clang-runtime }}" == "18" ]] && [[ "${{ matrix.os }}" != "macos-14" ]]; then
           echo "Valgrind reports true for clang-runtime 17 or 18, due to memory leaks with LLVM"
           valgrind --error-exitcode=1 --suppressions=../etc/valgrind-cppyy-cling.supp python -m pytest -m "not xfail" -v || true
         else
